# AutoComplete

./: .gitignore  CMakeLists.txt  FlowOfProgram.txt  README.md  runningCode.txt
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
SRC/: main.cpp
SRC/BFF/: BFF.cpp  BFF.h
Storage/: Dictionary.json  Dictionary.txt
Utilities/Data_Fetching/: DataFetcher.cpp  DataFetcher.h
Utilities/Data_Structures/: Trie.cpp  Trie.h
Utilities/Input_Handling/: liveInput.cpp  liveInput.h
Utilities/inputHandling/: liveInput.cpp  liveInput.h
